@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2025, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,7 +22,7 @@
  */
 
 /*
- * @test
+ * @test id=COH
  * @bug 8232069
  * @requires vm.cds
  * @requires vm.bits == 64
@@ -31,7 +31,30 @@
  * @requires vm.gc == null
  * @library /test/lib /test/hotspot/jtreg/runtime/cds/appcds
  * @compile test-classes/Hello.java
- * @run driver TestZGCWithCDS
+ * @comment Only run if COH is unset or enabled.
+ * @requires vm.opt.UseCompactObjectHeaders != "false"
+ * @comment Driver sets compressed oops/class pointers, jtreg overrides will cause problems.
+            Only run the test if the flags are not set via the command line.
+ * @requires vm.opt.UseCompressedOops == null
+ * @run driver TestZGCWithCDS true
+ */
+
+/*
+ * @test id=NO-COH
+ * @bug 8232069
+ * @requires vm.cds
+ * @requires vm.bits == 64
+ * @requires vm.gc.Z
+ * @requires vm.gc.Serial
+ * @requires vm.gc == null
+ * @library /test/lib /test/hotspot/jtreg/runtime/cds/appcds
+ * @compile test-classes/Hello.java
+ * @comment Only run if COH is unset or disabled.
+ * @requires vm.opt.UseCompactObjectHeaders != "true"
+ * @comment Driver sets compressed oops/class pointers, jtreg overrides will cause problems.
+            Only run the test if the flags are not set via the command line.
+ * @requires vm.opt.UseCompressedOops == null
+ * @run driver TestZGCWithCDS false
  */
 
 import jdk.test.lib.Platform;
@@ -40,9 +63,10 @@ import jdk.test.lib.process.OutputAnalyzer;
 public class TestZGCWithCDS {
     public final static String HELLO = "Hello World";
     public final static String UNABLE_TO_USE_ARCHIVE = "Unable to use shared archive.";
-    public final static String ERR_MSG = "The saved state of UseCompressedOops and UseCompressedClassPointers is different from runtime, CDS will be disabled.";
+    public final static String ERR_MSG = "The saved state of UseCompressedOops (0) is different from runtime (1), CDS will be disabled.";
     public static void main(String... args) throws Exception {
-         String compactHeaders = "-XX:+UseCompactObjectHeaders";
+         boolean compactHeadersOn = Boolean.valueOf(args[0]);
+         String compactHeaders = "-XX:" + (compactHeadersOn ? "+" : "-") + "UseCompactObjectHeaders";
          String helloJar = JarBuilder.build("hello", "Hello");
          System.out.println("0. Dump with ZGC");
          OutputAnalyzer out = TestCommon
@@ -54,7 +78,7 @@ public class TestZGCWithCDS {
          out.shouldContain("Dumping shared data to file:");
          out.shouldHaveExitValue(0);
 
-         System.out.println("1. Run with same args of dump");
+         System.out.println("Run with same args of dump");
          out = TestCommon
                    .exec(helloJar,
                          "-XX:+UseZGC",
@@ -64,12 +88,11 @@ public class TestZGCWithCDS {
          out.shouldContain(HELLO);
          out.shouldHaveExitValue(0);
 
-         System.out.println("2. Run with +UseCompressedOops +UseCompressedClassPointers");
+         System.out.println("Run with ZGC, +UseCompressedOops");
          out = TestCommon
                    .exec(helloJar,
                          "-XX:-UseZGC",
                          "-XX:+UseCompressedOops",           // in case turned off by vmoptions
-                         "-XX:+UseCompressedClassPointers",  // by jtreg
                          compactHeaders,
                          "-Xlog:cds",
                          "Hello");
@@ -77,37 +100,22 @@ public class TestZGCWithCDS {
          out.shouldContain(ERR_MSG);
          out.shouldHaveExitValue(1);
 
-         System.out.println("3. Run with -UseCompressedOops -UseCompressedClassPointers");
+         System.out.println("Run with SerialGC, -UseCompressedOops");
          out = TestCommon
                    .exec(helloJar,
                          "-XX:+UseSerialGC",
                          "-XX:-UseCompressedOops",
-                         "-XX:-UseCompressedClassPointers",
-                         compactHeaders,
-                         "-Xlog:cds",
-                         "Hello");
-         out.shouldContain(UNABLE_TO_USE_ARCHIVE);
-         out.shouldContain(ERR_MSG);
-         out.shouldHaveExitValue(1);
-
-         System.out.println("4. Run with -UseCompressedOops +UseCompressedClassPointers");
-         out = TestCommon
-                   .exec(helloJar,
-                         "-XX:+UseSerialGC",
-                         "-XX:-UseCompressedOops",
-                         "-XX:+UseCompressedClassPointers",
                          compactHeaders,
                          "-Xlog:cds",
                          "Hello");
          out.shouldContain(HELLO);
          out.shouldHaveExitValue(0);
 
-         System.out.println("5. Run with +UseCompressedOops -UseCompressedClassPointers");
+         System.out.println("Run with SerialGC, +UseCompressedOops");
          out = TestCommon
                    .exec(helloJar,
                          "-XX:+UseSerialGC",
                          "-XX:+UseCompressedOops",
-                         "-XX:-UseCompressedClassPointers",
                          compactHeaders,
                          "-Xlog:cds",
                          "Hello");
@@ -115,39 +123,5 @@ public class TestZGCWithCDS {
          out.shouldContain(ERR_MSG);
          out.shouldHaveExitValue(1);
 
-         System.out.println("6. Run with +UseCompressedOops +UseCompressedClassPointers");
-         out = TestCommon
-                   .exec(helloJar,
-                         "-XX:+UseSerialGC",
-                         "-XX:+UseCompressedOops",
-                         "-XX:+UseCompressedClassPointers",
-                         compactHeaders,
-                         "-Xlog:cds",
-                         "Hello");
-         out.shouldContain(UNABLE_TO_USE_ARCHIVE);
-         out.shouldContain(ERR_MSG);
-         out.shouldHaveExitValue(1);
-
-         System.out.println("7. Dump with -UseCompressedOops -UseCompressedClassPointers");
-         out = TestCommon
-                   .dump(helloJar,
-                         new String[] {"Hello"},
-                         "-XX:+UseSerialGC",
-                         "-XX:-UseCompressedOops",
-                         "-XX:+UseCompressedClassPointers",
-                         compactHeaders,
-                         "-Xlog:cds");
-         out.shouldContain("Dumping shared data to file:");
-         out.shouldHaveExitValue(0);
-
-         System.out.println("8. Run with ZGC");
-         out = TestCommon
-                   .exec(helloJar,
-                         "-XX:+UseZGC",
-                         compactHeaders,
-                         "-Xlog:cds",
-                         "Hello");
-         out.shouldContain(HELLO);
-         out.shouldHaveExitValue(0);
     }
 }
